--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ export class MyReactPage extends PageController
                             <h4>More</h4>
                             <ul>
                                     <li><a href="/docs/websocket-controllers">Advanced Guides</a></li>
-                                    <li><a href="/docs/date-formatter">Services</a></li>
+                                    <li><a href="/contribute">Contribute</a></li>
                             </ul>
                         </div>
                 </div>
