--- a/goals/index.html
+++ b/goals/index.html
@@ -93,7 +93,7 @@
                             <h4>More</h4>
                             <ul>
                                     <li><a href="/docs/websocket-controllers">Advanced Guides</a></li>
-                                    <li><a href="/docs/date-formatter">Services</a></li>
+                                    <li><a href="/contribute">Contribute</a></li>
                             </ul>
                         </div>
                 </div>
