--- a/contact/index.html
+++ b/contact/index.html
@@ -7,8 +7,10 @@
 <link rel="preload" href="/$/popper.js/dist/umd/popper.min.js" as="script">
 <link rel="preload" href="/$/bootstrap/dist/js/bootstrap.min.js" as="script">
 <link rel="preload" href="/bundle.js" as="script">
+<link rel="preload" href="https://www.googletagmanager.com/gtag/js?id=UA-121980200-1" as="script">
+<link rel="preload" href="/googletaginit.js" as="script">
 
-<title>Version Info | Zox.JS</title>
+<title>Contact | Zox.js</title>
 <link rel="stylesheet" href="/$/bootstrap/dist/css/bootstrap.min.css" >
 <link rel="stylesheet" href="/$/highlight.js/styles/vs2015.css" >
 <link rel="stylesheet" href="/bundle.css" >
@@ -18,7 +20,7 @@
 <body >
 <nav class="navbar navbar-expand-sm navbar-dark primary">
     <div class="container">
-        <a class="navbar-brand" href="/">Zox.JS</a>
+        <a class="navbar-brand" href="/">Zox.js</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -31,7 +33,7 @@
             </ul>
             <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/versions">v0.1.0</a>
+                        <a class="nav-link" href="/goals">Goals</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://github.com/zoxjs/zox">GitHub</a>
@@ -47,18 +49,14 @@
         <div class="col-lg-2"></div>
 
         <div class="article col-lg-8 pad-lg">
-            <h1>Version Info</h1>
+            <h1>Contact</h1>
             
-            <div class="body"><p>Zox.js is currently in pre-alpha and available as v0.1.0</p>
-<p>Current goals:</p>
-<ul>
-<li><p>Advanced theming support</p>
-</li>
-<li><p>Page caching</p>
-</li>
-<li><p>More efficient static file change checking</p>
-</li>
-</ul>
+            <div class="body"><p>The Zox.js project is maintained by Zoran Ravic</p>
+<p>For feature requests and bug reports please open an issue on <a href="https://github.com/zoxjs/zox/issues/new">GitGub</a>.</p>
+<p>For web development services you may contact me directly:</p>
+<p>Email: <a href="mailto:contact@zoranravic.com">contact@zoranravic.com</a></p>
+<p>Discord: Zoran#7650</p>
+<p>I accept frontend and backend jobs and I preffer to work with TypeScript or PHP.</p>
 </div>
         </div>
 
@@ -83,13 +81,14 @@
                                     <li><a href="/docs/render-service">Rendering</a></li>
                                     <li><a href="/docs/react-ssr">React</a></li>
                                     <li><a href="/docs/graphql-intro">GraphQL</a></li>
+                                    <li><a href="/docs/websocket-controllers">Advanced Guides</a></li>
                             </ul>
                         </div>
                         <div class="col-sm-6">
                             <h4>More</h4>
                             <ul>
-                                    <li><a href="/docs/websocket-controllers">Advanced Guides</a></li>
-                                    <li><a href="/docs/date-formatter">Services</a></li>
+                                    <li><a href="/contact">Contact</a></li>
+                                    <li><a href="/contribute">Contribute</a></li>
                             </ul>
                         </div>
                 </div>
@@ -101,6 +100,8 @@
 <script src="/$/popper.js/dist/umd/popper.min.js" ></script>
 <script src="/$/bootstrap/dist/js/bootstrap.min.js" ></script>
 <script src="/bundle.js" ></script>
+<script src="https://www.googletagmanager.com/gtag/js?id=UA-121980200-1"  async></script>
+<script src="/googletaginit.js" ></script>
 
 </body>
 </html>
