--- a/contribute/index.html
+++ b/contribute/index.html
@@ -51,8 +51,8 @@
             
             <div class="body"><p>There are a lot of ways you can help the Zox.js project.</p>
 <p>If you have founds issues on the official docs website
-you can report them <a href="https://github.com/zoxjs/zoxjs.com-source/issues">here</a>.</p>
-<p>You can report bugs for the main project <a href="https://github.com/zoxjs/zox/issues">here</a>.<br>Same goes for all other project over at <a href="https://github.com/zoxjs?tab=repositories">github</a>.</p>
+you can report them <a href="https://github.com/zoxjs/zoxjs.com-source/issues/new">here</a>.</p>
+<p>You can report bugs for the main project <a href="https://github.com/zoxjs/zox/issues/new">here</a>.<br>Same goes for all other project over at <a href="https://github.com/zoxjs?tab=repositories">GitHub</a>.</p>
 <p>We also accept pool requests and all contributors
 will be credited in the repo they contributed to.</p>
 <p>Another great way you can help the community is by creating
@@ -71,9 +71,9 @@ your own modules and plugins that extend Zox.js and publishing them on <a href="
                     </ul>
                     <h4>Main Concepts</h4>
                     <ul>
+                            <li><a href="/docs/environment-bootstrapping">Environment Bootstrapping</a></li>
                             <li><a href="/docs/plugins">Plugins</a></li>
                             <li><a href="/docs/services">Services</a></li>
-                            <li><a href="/docs/environment-bootstrapping">Environment Bootstrapping</a></li>
                             <li><a href="/docs/config">Configuration</a></li>
                             <li><a href="/docs/controllers">Controllers</a></li>
                             <li><a href="/docs/responses">Responses</a></li>
@@ -169,12 +169,13 @@ your own modules and plugins that extend Zox.js and publishing them on <a href="
                                     <li><a href="/docs/render-service">Rendering</a></li>
                                     <li><a href="/docs/react-ssr">React</a></li>
                                     <li><a href="/docs/graphql-intro">GraphQL</a></li>
+                                    <li><a href="/docs/websocket-controllers">Advanced Guides</a></li>
                             </ul>
                         </div>
                         <div class="col-sm-6">
                             <h4>More</h4>
                             <ul>
-                                    <li><a href="/docs/websocket-controllers">Advanced Guides</a></li>
+                                    <li><a href="/contact">Contact</a></li>
                                     <li><a href="/contribute">Contribute</a></li>
                             </ul>
                         </div>
