--- a/goals/index.html
+++ b/goals/index.html
@@ -63,6 +63,7 @@
 <li><p>More efficient static file delivery</p>
 </li>
 </ul>
+<p>You can request new features by opening an issue on <a href="https://github.com/zoxjs/zox/issues/new">GitGub</a>.</p>
 </div>
         </div>
 
@@ -87,12 +88,13 @@
                                     <li><a href="/docs/render-service">Rendering</a></li>
                                     <li><a href="/docs/react-ssr">React</a></li>
                                     <li><a href="/docs/graphql-intro">GraphQL</a></li>
+                                    <li><a href="/docs/websocket-controllers">Advanced Guides</a></li>
                             </ul>
                         </div>
                         <div class="col-sm-6">
                             <h4>More</h4>
                             <ul>
-                                    <li><a href="/docs/websocket-controllers">Advanced Guides</a></li>
+                                    <li><a href="/contact">Contact</a></li>
                                     <li><a href="/contribute">Contribute</a></li>
                             </ul>
                         </div>
