--- a/index.html
+++ b/index.html
@@ -248,12 +248,13 @@ export class MyReactPage extends PageController
                                     <li><a href="/docs/render-service">Rendering</a></li>
                                     <li><a href="/docs/react-ssr">React</a></li>
                                     <li><a href="/docs/graphql-intro">GraphQL</a></li>
+                                    <li><a href="/docs/websocket-controllers">Advanced Guides</a></li>
                             </ul>
                         </div>
                         <div class="col-sm-6">
                             <h4>More</h4>
                             <ul>
-                                    <li><a href="/docs/websocket-controllers">Advanced Guides</a></li>
+                                    <li><a href="/contact">Contact</a></li>
                                     <li><a href="/contribute">Contribute</a></li>
                             </ul>
                         </div>
