--- a/goals/index.html
+++ b/goals/index.html
@@ -63,7 +63,7 @@
 <li><p>More efficient static file delivery</p>
 </li>
 </ul>
-<p>You can request new features by opening an issue on <a href="https://github.com/zoxjs/zox/issues/new">GitGub</a>.</p>
+<p>You can request new features by opening an issue on <a href="https://github.com/zoxjs/zox/issues/new">GitHub</a>.</p>
 </div>
         </div>
 
